Fix for str.split

--- a/form.html
+++ b/form.html
@@ -75,8 +75,8 @@
     Not all Python language features are supported. Arithmetical operations, assignments, while loops,
     for loops to iterate a list, functions, lists, dictionaries and simple classes are available.
     The only built-in functions available are: <code>abs</code>, <code>float</code>, <code>input</code>, <code>int</code>,
-    <code>len</code>, <code>max</code>, <code>min</code>, <code>range</code> (in <code>for</code> loop), <code>list.append</code>
-    and <code>print</code>. You will get an error if the code contains language features which are not available.
+    <code>len</code>, <code>max</code>, <code>min</code>, <code>range</code> (in <code>for</code> loop), <code>list.append</code>,
+    <code>str.split</code>, and <code>print</code>. You will get an error if the code contains language features which are not available.
   </p>
 
   <div id="editor">
